--- a/client/src/Components/TipsCard/TipsCard.module.css
+++ b/client/src/Components/TipsCard/TipsCard.module.css
@@ -11,8 +11,27 @@
 
 .p {
     display: -webkit-box;
+    position: relative;
 	-webkit-line-clamp: 3;
 	-webkit-box-orient: vertical;
-	text-overflow: ellipsis;
+	text-overflow: none;
   	overflow: hidden;
+}
+
+.p::after {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    content: "Read More...";
+    padding: 0.1rem 0.2rem;
+    padding-left: 2.5rem;
+    background: linear-gradient(to right, transparent 10%, #ffffff 30%, #ffffff);
+    color: green;
+    font-weight: 700;
+    cursor: pointer;
+    transition: all 0.4s ease;
+}
+
+.p::after:hover {
+    color: rgba(0, 128, 0, 0.603);
 }
