--- a/client/src/Sections/TipSection/TipSection.module.css
+++ b/client/src/Sections/TipSection/TipSection.module.css
@@ -9,9 +9,24 @@
     gap: 6rem;
     padding: 5rem 0;
 }
-.h2{
+.h2 {
     font-size: 64px;
-    color:  #4c5b00;
+    color: #4c5b00;
     width: 64%;
     margin: 2rem auto;
+}
+@media screen and (max-width: 1214px) {
+    .wrapper{
+        padding: 2rem;
+    }
+    .gridContainer {
+        grid-template-columns: repeat(1, auto);
+    }
+    .h2{
+        width: fit-content;
+        font-size: 56px;
+    }
+}
+@media screen and (max-width: 560px) { 
+    
 }
