--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,13 +3,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Nunito",
+  sans-serif;
 }
 
 body {
   margin: 0;
   width: 100vw;
   overflow-x: hidden;
-  font-family: "Nunito", sans-serif;
   font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
