--- a/client/src/Components/Inputs/Input.module.css
+++ b/client/src/Components/Inputs/Input.module.css
@@ -7,3 +7,33 @@
     display: flex;
     justify-content: space-between;
 }
+.sublabel {
+    font-size: 0.8em;
+    color: #4c5b00;
+}
+
+.input {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1em;
+}
+
+.label {
+    margin-bottom: 0.1em;
+}
+
+label {
+    margin-bottom: 0.1em;
+}
+
+input {
+    outline: none;
+    height: 2.4em;
+    border: 2px solid #898B81;
+    border-radius: 0.25em;
+}
+
+input::placeholder {
+    padding-left: 10px;
+    color: #898B81;
+}
