--- a/client/src/Components/Login/Login.module.css
+++ b/client/src/Components/Login/Login.module.css
@@ -1,7 +1,9 @@
 .container {
     position: relative;
 }
-
+h2 {
+    margin-bottom: 0.4em;
+}
 .form {
     width: 30em;
     height: 23em;
@@ -17,29 +19,26 @@
 span {
     color: #b04b01
 }
+button {
 
-.input {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 1em;
+    align-self: center;
+    background: #4c5b00;
+    font-size: 1em;
+    border-style: none;
+    color: #fff;
+    width: 100%;
+    height: 2.3em;
+    border-radius: 6px;
+    cursor: pointer;
 }
-
-.label {
-    margin-bottom: 0.5em;
+button:hover {
+    background: #556601;
 }
-
-label {
-    margin-bottom: 0.5em;
+.smallText {
+    margin-top: 1em;
+    font-size: 0.8em;
 }
-
-input {
-    outline: none;
-    height: 2.4em;
-    border: 2px solid #898B81;
-    border-radius: 0.25em;
-}
-
-input::placeholder {
-    padding-left: 10px;
-    color: #898B81;
+.link {
+    text-decoration: none;
+    color: #4c5b00;
 }
