--- a/client/src/Components/Buttons/Button.module.css
+++ b/client/src/Components/Buttons/Button.module.css
@@ -2,7 +2,8 @@
     padding: 0.5rem 1rem;
     background-color: #4c5b00;
     color: #fff;
-    border-radius: 10px;
+    border-radius: 5px;
     width: 8rem;
     cursor: pointer;
+    border: none;
 }
