--- a/client/src/Components/Buttons/Button.module.css
+++ b/client/src/Components/Buttons/Button.module.css
@@ -7,3 +7,11 @@
     cursor: pointer;
     border: none;
 }
+
+@media screen and (max-width: 720px){
+    .button{
+        width: 12rem;
+        padding: 1.25rem;
+        font-size: 24px;
+    }
+}
