--- a/client/src/Components/NavBar/NavBar.module.css
+++ b/client/src/Components/NavBar/NavBar.module.css
@@ -68,6 +68,9 @@
     .listItem {
         font-size: 2.5rem;
     }
+    .listItem{
+        padding: 1.75rem;
+    }
 }
 
 @media screen and (max-width: 514px){
