--- a/client/src/Components/NavBar/NavBar.module.css
+++ b/client/src/Components/NavBar/NavBar.module.css
@@ -1,90 +1,90 @@
-.wrapper {
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
-    
-}
-
-.container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 8vh;
+.nav {
     width: 100%;
-    padding: 0 5rem;
-    color: #4c5b00;
-    font-size: 1.75rem;
-    font-weight: bolder;
-}
-.listContainer {
-    display: flex;
-    list-style: none;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 50%;
-}
-.listItems{
-    text-decoration: none;
-    color: inherit;
-    /* high */
-}
-.listItems:hover,
-.toggler:hover {
-    cursor: pointer;
+    position: relative;
 }
 
-.toggler {
+.nav > .navHeader {
+    display: inline;
+}
+
+.nav > .navHeader > .navTitle {
+    display: inline-block;
+    font-size: 36px;
+    font-weight: 900;
+    color: #4c5b00;
+    padding: 2rem;
+}
+
+.nav > .navBtn {
     display: none;
 }
 
-@media screen and (max-width: 1214px) {
-    .wrapper{
-        width: 100vw;
-    }
-    .container {
-        width: 100%;
-        height: auto;
-        padding: 0;
-        font-size: 1rem;
-    }
-    .toggler {
-        display: block;
-        padding: 3rem;
-        align-self: flex-end;
-        font-size: 28px;
-    }
-   .container{
-       display: flex;
-       align-items: flex-start;
-       justify-content: space-between;
-   }
-    .listContainer {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: flex-start;
-        width: 30%;
-        height: auto;
-    }
-    .listItems,
-    .listItem {
-        font-size: 2.5rem;
-    }
-    .listItem{
-        padding: 1.75rem;
-    }
+.nav > .navLinks {
+    display: inline;
+    float: right;
+    font-size: 18px;
 }
 
-@media screen and (max-width: 514px){
-    .wrapper{
-        width: fit-content;
-        padding: 1.5rem;
-    }
-    .container{
-        display: block;
-        width: 100vw;
-    }
+.nav > .navLinks > a {
+    display: inline-block;
+    padding: 2rem;
+    font-weight: 600;
+    text-decoration: none;
+    color: #333;
+    font-size: 1.5rem;
+}
 
-    .toggler{
-        font-size: 24px;
-        padding: 1rem;
+.nav > .navLinks > a:hover {
+    color: #4c5b00;
+}
+
+.nav > .navChecked {
+    display: none;
+}
+
+@media (max-width: 1000px) {
+    .nav > .navBtn {
+        display: inline-block;
+        position: absolute;
+        right: 0px;
+        top: 0px;
+    }
+    .nav > .navBtn > label {
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        padding: 13px;
+    }
+    .nav > .navBtn > label:hover,
+    .nav .navChecked:checked ~ .navBtn > label {
+        background-color: #4c5b00;
+    }
+    .nav > .navBtn > label > span {
+        display: block;
+        width: 25px;
+        height: 10px;
+        border-top: 2px solid #eee;
+    }
+    .nav > .navLinks {
+        position: absolute;
+        display: block;
+        width: 100%;
+        background-color: #333;
+        height: 0px;
+        transition: all 0.3s ease-in;
+        overflow-y: hidden;
+        top: 50px;
+        left: 0px;
+    }
+    .nav > .navLinks > a {
+        display: block;
+        width: 100%;
+    }
+    .nav > .navChecked:not(:checked) ~ .navLinks {
+        height: 0px;
+    }
+    .nav > .navChecked:checked ~ .navLinks {
+        height: calc(100vh - 50px);
+        overflow-y: auto;
     }
 }
